--- a/css/index_css.css
+++ b/css/index_css.css
@@ -61,48 +61,19 @@ p {
     cursor: pointer;
 }
 
-/*展开搜索框相关*/
-.search_back {
-    width: 200px;
-    height: 60px;
-    text-align: center;
-    position: absolute;
-    z-index: 50;
-    top: 0;
-    left: 0;
-    font-size: 26px;
-}
-
-.search_back p {
-    color: cornflowerblue;
-    line-height: 60px;
-}
-
-.search_title {
-    position: absolute;
-    z-index: 50;
-    top: 0;
-    left: 46%;
-    font-size: 26px;
-}
-
-.search_title span {
-    line-height: 64px
-}
-
 /*页面主体*/
-body {
-    overflow-y: hidden;
-}
 
 .content_div {
+    margin-top: 56px;
     position: relative;
 }
 
 .content_main {
-    padding-top: 70px;
-    height: 1000px;
-    /*margin: 0 40px 0 35px;*/
+    margin: 0 40px 0 35px;
+}
+
+.card_list {
+    padding-left: 20px;
 }
 
 /*覆盖原定义*/
@@ -117,88 +88,6 @@ body {
 
 .hide {
     display: none;
-}
-
-/*视频列表*/
-.video_list .box {
-    margin: 10px;
-}
-
-.video_list .box, .video_list .box img {
-    width: 250px;
-    height: 140px;
-}
-
-.full-length {
-    width: 100%;
-    float: left;
-    padding-bottom: 80px;
-}
-
-.video_list td {
-    padding-left: 5px;
-}
-
-.video_list ul {
-    margin: 0 -1.5%;
-}
-
-.video_list li {
-    float: left;
-    width: 31.33%;
-    margin: 10px 1%;
-    list-style: none;
-}
-
-.video_list h3 {
-    font-size: 20px;
-    margin: 5px 0 10px;
-}
-
-.video_list .btn {
-    display: inline-block;
-    padding: 5px 10px;
-    font-size: 14px;
-
-    color: #4d92d9;
-    border: 2px solid #4d92d9;
-
-    background-color: transparent;
-    text-decoration: none;
-    transition: 0.4s;
-}
-
-.video_list .btn:hover {
-    background-color: #4d92d9;
-    color: #fff;
-    transition: 0.4s;
-}
-
-.text-desc {
-    word-break: break-all;
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-color: #fff;
-    height: 100%;
-    line-height: 20px;
-    opacity: 0;
-    width: 100%;
-}
-
-.text-desc p {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-}
-
-.text-desc .fa-info-circle {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    text-decoration: none;
 }
 
 /*分类导航部分*/
