--- a/css/index_css.css
+++ b/css/index_css.css
@@ -1,7 +1,7 @@
 body {
     /*background: url(../resource/index_bg1.jpg) no-repeat center center fixed;*/
-    background-attachment: fixed;
-    background: #eee !important;
+    /*background-attachment: fixed;*/
+    /*background: #eee !important;*/
 }
 
 .change_avatar {
