--- a/play/css/play_css.css
+++ b/play/css/play_css.css
@@ -47,8 +47,8 @@ div {
     /*border: 1px red solid;*/
 }
 
-.course_title {
-    visibility: hidden;
+.player_note_div {
+    padding: 10px !important;
 }
 
 .play {
@@ -65,43 +65,42 @@ div {
 }
 
 .player_bg {
+    margin: 0 auto;
+    max-width: 80%;
     background: black;
 }
 
 .note {
-    width: 400px;
+    /*width: 400px;*/
     height: 576px;
     padding: 10px;
 }
 
 .info {
-    padding: 20px;
+
 }
 
 .teacher_info {
     padding: 30px;
     background: white;
-    width: 70%;
     height: 300px;
 }
 
 .course_info {
-    padding: 30px;
+    padding: 10px;
     background: white;
-    width: 70%;
     height: 300px;
 }
 
 .info > div {
-    margin: 0px auto;
+    margin: 0 auto;
 }
 
 /*笔记相关*/
 .note {
     z-index: 1;
     background: white;
-    margin-left: 10px;
-    border: 1px black solid;
+    border: 1px darkgrey solid;
 }
 
 #new_note {
@@ -131,12 +130,14 @@ div {
 .clear {
     clear: both;
 }
-.course_info{
-    box-shadow: 2px 2px 10px #707070;
+
+.course_info .tab > div {
+    padding: 10px;
 }
 
 .course_info .p1_title {
-    font-size: 24px;
+    font-size: 32px;
+    font-weight: bold;
     display: inline-block;
 }
 
@@ -174,9 +175,11 @@ div {
 .teacher_info_p1 img {
     width: 100px;
 }
-.teacher_info{
-    box-shadow: 2px 2px 10px #707070;
+
+.teacher_info {
+
 }
+
 .teacher_info_p1 div {
     padding-left: 10px;
     font-size: 26px;
@@ -192,13 +195,17 @@ div {
     background: white;
     /*width: 70%;*/
     margin: 10px auto;
-    min-height: 300px;
-    padding: 20px;
+    /*min-height: 300px;*/
+    padding-top: 10px;
 }
 
-.reply table {
-    margin: 0 auto 20px;
-    width: 70%;
+.reply .reply_table {
+    margin: 0 auto 40px;
+    width: 80%;
+}
+
+.reply .reply_table td {
+    word-break: break-all;
 }
 
 .reply .avatar {
@@ -212,18 +219,28 @@ div {
 .reply .content {
     /*min-height: 80px;*/
     padding-top: 10px;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .reply .reply_edit {
     margin-top: 10px;
 }
-
+.reply_btn{
+    font-size: 14px;
+}
 .reply_btn:hover {
     cursor: pointer;
+}
+
+.reply_edit textarea {
+    width: 90% !important;
 }
 
 .toreply {
     padding: 10px;
     background: #f4f4f4;
+}
+
+.hide {
+    display: none;
 }
